<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FootPrint</string>
    <string name="home">首页</string>
    <string name="focus">关注点</string>
    <string name="mypage">我的</string>
    <string name="trip">行程</string>
    <string name="friend">好友</string>
    <string name="searchhint">搜索关注点/行程等</string>
    <string name="search">搜   索</string>
    <string name="checkprint">踩   点</string>
    <string name="report">发表</string>
    <string name="writesomething">写点什么吧...</string>
    <string name="nowpoint">当前关注点</string>
    <string name="nowaddress">请选择上一级</string>
    <string name="choosefocus">选择关注点</string>
    <string name="goingtrip">正在进行中的行程</string>
    <string name="createfocus">创建关注点</string>
    <string name="title">标题:</string>
    <string name="type">类型:</string>
    <string name="style">风格:</string>
    <string name="pleasechoose">请选择</string>
    <string name="pleaseinput">请输入</string>
    <string name="create">创建</string>
    <string name="submit">提交</string>
    <string name="personalpage">个人主页</string>
    <string name="nologin">未登录</string>
    <string name="mycollection">我的收藏</string>
    <string name="soontrip">我的导航</string>
    <string name="myfocus">我的关注点</string>
    <string name="mytrip">我的行程</string>
    <string name="myfootprint">我的踩点</string>
    <string name="createuser">创建者:</string>
    <string name="personincharge">负责人:</string>
    <string name="creattime">创建时间:</string>
    <string name="tripdetail">行程详情</string>
    <string name="tripplan">安排内容</string>
    <string name="tripabstract">行程简介</string>
    <string name="foucsabstract">关注点简介</string>
    <string name="triplan">行程安排</string>
    <string name="footprintinfo">踩点信息</string>
    <string name="usercomment">用户评价</string>
    <string name="showinmap">在地图中显示</string>
    <string name="myplace">我的位置</string>
    <string name="navigationtrack">导航轨迹</string>
    <string name="alltrack">所有轨迹</string>
    <string name="walktrack">行走轨迹</string>
    <string name="hidetrack">影藏轨迹</string>
    <string name="writecomment">写点评</string>
    <string name="clickstar">点击星形评分</string>
    <string name="chatroom">聊天室</string>
    <string name="participantlist">参与者</string>
    <string name="tripmainplan">安排详情</string>
    <string name="walktohere">步行前往</string>
    <string name="drivetohere">自驾前往</string>
    <string name="editnewtripplan">新的安排</string>
    <string name="map">地   图</string>
    <string name="detail">详   情</string>
    <string name="planbrief">安排概要:</string>
    <string name="login">登    录</string>
    <string name="register">注    册</string>
    <string name="account">帐 号</string>
    <string name="password">密 码</string>
    <string name="enteryourphone">请输入你的手机号</string>
    <string name="setting">设   置</string>
    <string name="exitlogin">退出登录</string>
     <string name="writewalktrack">写轨迹</string>
     <string name="foucsdetail">关注点详情</string>
     <string name="address">地      址:</string>
     <string name="navi">导航</string>
     <string name="myinfo">我的信息</string>
     <string name="starttrip">启 &#160;&#160;&#160;&#160;程</string>
     <string name="endtrip">完&#160;程</string>
</resources>
