<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/view" >
    </FrameLayout>

    <LinearLayout
        android:id="@+id/lin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/home_image"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/home1" />

            <TextView
                android:id="@+id/home_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/home"
                android:textSize="6pt" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/trip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/trip_image"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/navi1" />

            <TextView
                android:id="@+id/trip_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/navi"
                android:textSize="6pt" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/footprint"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/orange_corners"
            android:gravity="center" >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/add" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/friend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/friend_image"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/friend1" />

            <TextView
                android:id="@+id/friend_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/friend"
                android:textSize="6pt" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/myinfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/myinfo_image"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/mypage1" />

            <TextView
                android:id="@+id/myinfo_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/mypage"
                android:textSize="6pt" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@+id/lin"
        android:background="@color/linegray" />

</RelativeLayout>