<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/back_image"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:src="@drawable/back_orange" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/tripdetail"
            android:textSize="20sp"
            android:textStyle="bold" />

        
             <ImageView
            android:id="@+id/participant_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/participant"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:layout_alignParentRight="true"
             />

        <TextView
            android:id="@+id/end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/participant_image"
            android:layout_marginRight="47dp"
            android:layout_toLeftOf="@+id/participant_image"
            android:text="@string/endtrip"
            android:textColor="@color/orange"
            android:textSize="18sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/linegray"
        android:layout_below="@+id/rel" />

    <ScrollView
        android:id="@+id/sctroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/start"
        android:layout_below="@+id/rel"
        android:scrollbars="none" >

       <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/topimage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/sample1" />

             <TextView
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/triptitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="宁波工程学院一日游"
                android:maxEms="2"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/linegray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/tripabstract"
                    android:textSize="16sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/linegray" />
            </LinearLayout>

            <TextView
                android:id="@+id/text_tripabstract"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="中国十大名胜古迹是指1985年由《中国旅游报》发起并组织全国人民经过半年多的评比，于当年9月9日评选出的万里的长城、桂林山水、北京的故宫、杭州的西湖、苏州园林、安徽的黄山、长江三峡、还有台湾日月潭、承德避暑山庄、西安秦兵马俑十个风景名胜区。这十个景区分布于祖国的东西南北各个区域，包括自然景观，历史建筑，人文景观和文物古迹等" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/backgroundgray" />
            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView 
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/createuser"
                    android:textSize="16sp"
                    />
                <TextView 
                    android:id="@+id/creatusername"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="老李"
                    android:textSize="16sp"
                    android:textColor="@color/orange"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/backgroundgray" />
            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView 
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/creattime"
                    android:textSize="16sp"
                    />
                <TextView 
                    android:id="@+id/createtime"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2016/05/06"
                    android:textSize="16sp"
                    />
            </LinearLayout>
            
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@color/backgroundgray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/triplan"
                android:textSize="16sp" />
         	</LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="10dp"
                android:background="@color/linegray" />

            <com.Tool.MyListView
                android:id="@+id/listview_focus"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
            </com.Tool.MyListView>



            <View
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/backgroundgray" />
        </LinearLayout>
    </ScrollView>

<RelativeLayout
    android:id="@+id/start"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal"
    android:background="@color/orange"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true" >

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_centerHorizontal="true"
           android:layout_centerVertical="true"
           android:text="@string/starttrip"
           android:textColor="#ffffff"
           android:textSize="20dp"
           android:textStyle="bold" />
       
</RelativeLayout>

</RelativeLayout>