<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <RelativeLayout
        android:id="@+id/rel"
        android:layout_width="match_parent"
        android:layout_height="50dp" >

        <ImageView
            android:id="@+id/back_image"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:src="@drawable/back_orange" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/login"
            android:textSize="20sp" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_below="@+id/rel"
        android:background="@color/linegray" />
    
    <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:padding="10dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:orientation="horizontal" >
					<TextView 
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:text="@string/account"
					    android:textSize="18sp"/>
                    <EditText 
                        android:id="@+id/useraccount"
                        android:layout_marginLeft="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textSize="15sp"
                        android:hint="@string/enteryourphone"
                        android:background="#00000000"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:background="#cccccc" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:orientation="horizontal" >
					<TextView 
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:text="@string/password"
					    android:textSize="18sp"/>
                    <EditText 
                        android:id="@+id/userpassword"
                        android:layout_marginLeft="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textSize="15sp"
                        android:inputType="textPassword"
                        android:background="#00000000"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:background="#cccccc" />
            </LinearLayout>
            
    
    <LinearLayout 
        android:id="@+id/login"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_horizontal"
        android:background="@drawable/orange_corners">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"/>
        
    </LinearLayout>
    
    <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:text="免费注册"
                    android:textColor="@color/orange"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/findpassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="18dp"
                    android:text="找回密码"
                    android:textColor="#828282"
                    android:textStyle="bold" />
            </RelativeLayout>

</LinearLayout>
