<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#ffffff">
   <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/back_image"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:src="@drawable/back_orange" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/writecomment"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/report_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:layout_alignParentRight="true"
            android:text="@string/report"
            android:textColor="@color/orange"
            android:textSize="18sp" />

    </RelativeLayout>
    <View 
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/linegray"/>

    <RatingBar
        android:id="@+id/tripcommentrank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        style="@style/broomRatingBar"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:stepSize="1"
        android:rating="3"
         />
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clickstar"
        android:textColor="@color/textgray"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:textSize="12sp"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#FAFAFA">
        <RelativeLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_margin="5dp"
            ></LinearLayout>
     <EditText 
         android:id="@+id/commentcontent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#00000000"
         android:layout_margin="5dp"
         android:hint="填写你的评论"
         android:textSize="15sp"
         />      
        </RelativeLayout>
        <RelativeLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentRight="true"
           android:layout_alignParentTop="true" 
           android:layout_marginRight="5dp"
           android:layout_marginBottom="10dp">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="评论不得少于" 
               android:textColor="@color/textgray"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="15"
               android:textColor="@color/orange" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="个字"
               android:textColor="@color/textgray" />
       </LinearLayout>

        </RelativeLayout>
        
        
        
        
    </LinearLayout>

</LinearLayout>
